--- a/app/views/users/myevents.html.erb
+++ b/app/views/users/myevents.html.erb
@@ -5,37 +5,36 @@
       <%= link_to 'Novo Evento', new_event_event_path,:class=> "url", style:"float:right"%>
   <% end %>
 </ol>
+<% if @my_events.empty? %>
+    Ainda não existem eventos. Consulte os pacotes disponíveis!
+<% else %>
 
-<!--<h1>Listing event_events</h1>-->
+<div class="row" style="margin-right:0px">
+  <% @my_events.each do |event_event| %>
+      <div class="col-md-6">
+        <div class="well well-sm">
+          <div class="row">
+            <div class="col-xs-3 col-md-3 text-center">
+              <img src="http://images6.fanpop.com/image/photos/33400000/Cute-Cats-cats-33440930-1280-800.jpg" alt="bootsnipp"
+                   class="img-rounded img-responsive" />
+            </div>
+            <div class="col-xs-9 col-md-9 section-box">
+              <%= link_to event_event.title, event_event, class:"h2 url" %>
+              <div style="float:right"><%= link_to 'Editar', edit_event_event_path(event_event), class:"url" %> <%= link_to 'Eliminar', event_event, class:"url", method: :delete, data: { confirm: 'Are you sure?' } %> </div>
+              <p><%= event_event.description %></p>
+              <hr />
+              <div class="row rating-desc">
+                <div class="col-md-12">
+                  <span class="fa fa-calendar"></span><%=event_event.start_day.day %>/<%=event_event.start_day.mon %>/<%=event_event.start_day.year %>
+                  <span class="separator">|</span>
+                  <span class="fa fa-calendar"></span><%=event_event.end_day.day %>/<%=event_event.end_day.mon %>/<%=event_event.end_day.year %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  <% end %>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Inicio</th>
-      <th>Fim</th>
-      <th>Titulo</th>
-      <th>Descrição</th>
-      <th>Utilizador</th>
-      <th>Aprovado</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @my_events.each do |event_event| %>
-        <tr>
-          <td><%= event_event.start_day %></td>
-          <td><%= event_event.end_day %></td>
-          <td><%= event_event.title %></td>
-          <td><%= event_event.description %></td>
-          <td><%= event_event.user_id %></td>
-          <td><%= event_event.aproved %></td>
-          <td><%= link_to 'Show', event_event %></td>
-          <td><%= link_to 'Edit', edit_event_event_path(event_event) %></td>
-          <td><%= link_to 'Destroy', event_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-    <% end %>
-  </tbody>
-</table>
+<% end %>
