--- a/app/assets/stylesheets/academy/tutorials.css
+++ b/app/assets/stylesheets/academy/tutorials.css
@@ -19,6 +19,16 @@
 	color:#EA5B0C;
 }
 
+.new_tutorial 
+{
+	background-color: #78CD51;
+	border-color: #78CD51;
+	color: #FFFFFF;
+	float: right;	
+	height: auto;
+	
+}
+
 
 
 
