--- a/app/views/layouts/_sidebar_left_academy.erb
+++ b/app/views/layouts/_sidebar_left_academy.erb
@@ -1,4 +1,13 @@
-<%= form_tag academy_tutorials_path ,:method => :get do%>
+
+<% correct_path = nil %>
+<% if params[:controller] == "academy/tutorials" %>
+  <% correct_path = academy_tutorials_path %>
+<% else %>
+  <% correct_path = academy_questions_path %>
+<% end %>
+
+
+<%= form_tag correct_path ,:method => :get do%>
 
     <!-- Split button Categoria -->
     <div class="btn-group" style="width: 100%; margin-bottom: 2px" >
@@ -20,30 +29,6 @@
                   <%= check_box_tag "search[]","cat:#{cat.id}" %>
               <% end %>
               <%= cat.name %>
-            </li>
-        <% end %>
-      </ul>
-    </div>
-
-    <div class="btn-group" style="width: 100%; margin-bottom: 2px">
-      <button type="button" class="btn btn-sm" style="width: 80%;text-align: left">Cidade</button>
-      <button type="button" class="btn btn-sm dropdown-toggle" style="width: 20%" data-toggle="dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Cidade</span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <% @cities.each do |city| %>
-            <li>
-              <% if !params[:search].nil? %>
-                  <%  if params[:search].include?("city:" + "#{city.id}") %>
-                      <%= check_box_tag "search[]","city:#{city.id}", "active" %>
-                  <% else %>
-                      <%= check_box_tag "search[]","city:#{city.id}" %>
-                  <% end %>
-              <% else %>
-                  <%= check_box_tag "search[]","city:#{city.id}" %>
-              <% end %>
-              <%= city.city %>
             </li>
         <% end %>
       </ul>
