--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -26,6 +26,8 @@
     <div class="col-lg-12">
       <section class="panel" style="margin-right: 8px">
         <header class="panel-heading "><h3>Perguntas</h3></header>
+        
+        <%= will_paginate(@academy_questions, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
         <div class="table-responsive">
             <table class="table table-hover">
               <thead>
@@ -66,6 +68,7 @@
               </tbody>
             </table>
           </div>
+          <%= will_paginate(@academy_questions, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
           <div class="col-lg-12" style="text-align: center;">
             
 
