--- a/app/views/users/myevents.html.erb
+++ b/app/views/users/myevents.html.erb
@@ -11,7 +11,7 @@
 
 <!--<h1>Listing event_events</h1>-->
 
-<%= will_paginate(@my_events, :renderer => WillPaginate::ActionView::LinkRenderer, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
+<%= will_paginate(@my_events, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
 <div class="row" style="margin-right:0px">
   <% @my_events.each do |event_event| %>
       <div class="col-md-6">
@@ -41,4 +41,4 @@
 </div>
 
 <% end %>
-<%= will_paginate(@my_events, :renderer => WillPaginate::ActionView::LinkRenderer, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
+<%= will_paginate(@my_events, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
