--- a/app/views/layouts/_header_ads_notification.html.erb
+++ b/app/views/layouts/_header_ads_notification.html.erb
@@ -5,7 +5,7 @@
 <%#= @ad_notifications_messages.length %>
 <%#= asdasd %>
 
-<% number_notifications_ads = @notifications_ad_messages.length + @notifications_ad_expired.length %>
+<% number_notifications_ads = @notifications_ad_messages.length + @notifications_ad_expired.length + @notifications_new_answer.length %>
 
 
 <li class="dropdown messages-dropdown">
@@ -18,9 +18,7 @@
   <% end %>
 
 <%# notifications from expired ads %>
-
   <ul class="dropdown-menu">
-
     <% if expired_ads.count > 0 %>
       <li class="dropdown-header"><%= expired_ads.count %> Anuncios aspiraram</li>
         <% first_expired_ads = expired_ads.limit(5) %>
@@ -41,8 +39,29 @@
       <li class="divider"></li>
     <% end %>
 
-<%# notifications from messages in ads %>
+<%# notifications expired ads %>
+    <% if @notifications_ad_expired.length > 0 %>
+      <li class="dropdown-header"><%= @notifications_ad_expired.length %> Anúncios expiraram</li>
+        <%# first_expired_ads = expired_ads.limit(5) %>
+        <% @notifications_ad_expired.each do |notification| %>
+          <% ad = Ad.find(notification.id_destination) %>
+          <li class="preview">
+            <a href="<%= ad_path(ad, :notification => notification) %>">
+              <% if ad.ad_images.count > 0 %>
+                <span class="avatar"><%= image_tag(ad.ad_images.first.image.url(:thumb), :alt => ad.title, :width => '50') %></span>
+              <% else %>
+                <span class="avatar"><img width="50" alt="50x50" src="http://placehold.it/50x50"></img></span>
+              <% end %>
+              <span class="name"><%= ad.title %></span>
+              <span class="message"><%= ad.limited_description(20) %></span>
+              <span class="time"><i class="icon-time"></i><abbr class="timeago" title="<%= ad.expire_date.getutc.iso8601 %>"> <%= ad.expire_date.to_s %> </abbr></span>
+            </a>
+          </li>
+        <% end %>
+      <li class="divider"></li>
+    <% end %>
 
+<%# notifications from messages in ads %>
     <% if @notifications_ad_messages.length > 0 %>
       <li class="dropdown-header"><%= @notifications_ad_messages.length %> Novas mensagens</li>
         <%# first_expired_ads = expired_ads.limit(5) %>
@@ -58,6 +77,21 @@
               <span class="name"><%= ad.title %></span>
               <span class="message"><%= ad.limited_description(20) %></span>
               <span class="time"><i class="icon-time"></i><abbr class="timeago" title="<%= ad.expire_date.getutc.iso8601 %>"> <%= ad.expire_date.to_s %> </abbr></span>
+            </a>
+          </li>
+        <% end %>
+      <li class="divider"></li>
+    <% end %>
+
+<%# notifications new answers for your questions %>
+    <% if @notifications_new_answer.length > 0 %>
+      <li class="dropdown-header"><%= @notifications_new_answer.length %> Novas Respostas</li>
+        <%# first_expired_ads = expired_ads.limit(5) %>
+        <% @notifications_new_answer.each do |notification| %>
+          <% question = Academy::Question.find(notification.id_destination) %>
+          <li class="preview">
+            <a href="<%= academy_question_path(question, :notification => notification) %>">
+              <span class="name"><%= question.title %></span>
             </a>
           </li>
         <% end %>
