--- a/app/views/academy/tutorials/index.html.erb
+++ b/app/views/academy/tutorials/index.html.erb
@@ -8,11 +8,13 @@
  <ol class="breadcrumb" id="breadcrumbAds">
     <li class="active"><a class="url" href="<%= academy_tutorials_path %>"><i class="fa fa-tags"></i> Tutoriais</a></li>
    <% if user_signed_in? %>
-      <div class="new_tutorial col-lg-2">
+
+      <div class="new_tutorial">
 
         <%= link_to 'Novo Tutorial', new_academy_tutorial_path,:class=> "url", style:"float:right"%>
-        <i class="fa fa-plus"></i>
+        
       </div>
+      
    <% end %>
  </ol>
 
