--- a/app/assets/stylesheets/academy/tutorials.css
+++ b/app/assets/stylesheets/academy/tutorials.css
@@ -26,6 +26,12 @@
 	color: #FFFFFF;
 	float: right;	
 	height: auto;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	vertical-align: center;
+	
 	
 }
 
