--- a/app/views/layouts/_header_ads_notification.html.erb
+++ b/app/views/layouts/_header_ads_notification.html.erb
@@ -44,7 +44,7 @@
       <li class="dropdown-header"><%= @notifications_ad_expired.length %> Anúncios expiraram</li>
         <%# first_expired_ads = expired_ads.limit(5) %>
         <% @notifications_ad_expired.each do |notification| %>
-          <% ad = Ad.find(notification.id_destination) %>
+          <% ad = notification.ad %>
           <li class="preview">
             <a href="<%= ad_path(ad, :notification => notification) %>">
               <% if ad.ad_images.count > 0 %>
@@ -66,7 +66,7 @@
       <li class="dropdown-header"><%= @notifications_ad_messages.length %> Novas mensagens</li>
         <%# first_expired_ads = expired_ads.limit(5) %>
         <% @notifications_ad_messages.each do |notification| %>
-          <% ad = Ad.find(notification.id_destination) %>
+          <% ad = notification.ad %>
           <li class="preview">
             <a href="<%= ad_path(ad, :notification => notification) %>">
               <% if ad.ad_images.count > 0 %>
@@ -88,7 +88,7 @@
       <li class="dropdown-header"><%= @notifications_new_answer.length %> Novas Respostas</li>
         <%# first_expired_ads = expired_ads.limit(5) %>
         <% @notifications_new_answer.each do |notification| %>
-          <% question = Academy::Question.find(notification.id_destination) %>
+          <% question = notification.question %>
           <li class="preview">
             <a href="<%= academy_question_path(question, :notification => notification) %>">
               <span class="name"><%= question.title %></span>
