[Update] SideBar left Collapse

--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -6,11 +6,11 @@
         <div class="panel-heading" style="background-color: #39b3d7">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseMercado">
-                <span class="icon-shopping-cart" style="margin-right: 2px"></span>MERCADO
+                <span class="icon-shopping-cart" style="margin-right: 2px"></span>MERCADO 
             </a>
           </h4>
         </div>
-        <div id="collapseMercado" class="panel-collapse collapse">
+        <div id="collapseMercado" class="panel-collapse collapse <%= in_mercado? %>">
           <div class="panel-body">
             <ul>
               <li><%= link_to "Entrar no Mercado".html_safe , ads_path %></li>
@@ -40,7 +40,7 @@
             </a>
           </h4>
         </div>
-        <div id="collapseEventos" class="panel-collapse collapse">
+        <div id="collapseEventos" class="panel-collapse collapse <%= in_events? %>">
           <div class="panel-body">
             <ul>
               <li><%= link_to "Ver Todos".html_safe, event_events_path %></li>
@@ -72,7 +72,7 @@
             </a>
           </h4>
         </div>
-        <div id="collapseAcademia" class="panel-collapse collapse">
+        <div id="collapseAcademia" class="panel-collapse collapse <%= in_academy? %>">
           <div class="panel-body">
             <ul>
             <li><%= link_to "Entrar na Academia".html_safe, academy_path %></li>
