--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -1,4 +1,4 @@
-<div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
+<!--<div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
 
   <section class="panel">
     <div class="panel-body">
@@ -36,18 +36,40 @@
       </div>
     </div>
   </section>
+</div>-->
+
+<div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
+    <section class="panel">
+        <div class="panel-body">
+            <div>
+                <article class="media">
+                  <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
+                    <a href="#" class=" p-head">Pacotes disponiveis</a>
+                  </div>
+                  <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
+                      <a class="pull-left thumb p-thumb"><img src="/assets/50x50.gif"></a>
+                      <a class="pull-left thumb p-thumb"><img src="/assets/50x50.gif"></a>
+                      <a class="pull-left thumb p-thumb"><img src="/assets/50x50.gif"></a>
+                      <a class="pull-left thumb p-thumb"><img src="/assets/50x50.gif"></a>
+                  </div>
+                  <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
+                    <div class="media-body">
+                      <p>click aqui para ver mais informação</p>
+                    </div>
+                  </div>
+                </article>
+            </div>
+        </div>
+    </section>
 </div>
 
 <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
     <section class="panel">
-        <header class="panel-heading">
-            Mais Vistos
-        </header>
         <div class="panel-body">
             <div>
                 <article class="media">
                     <a class="pull-left thumb p-thumb">
-                        <img src="http://placehold.it/50x50">
+                        <img src="/assets/50x50.gif">
                     </a>
                     <div class="media-body">
                         <a href="#" class=" p-head">Item One Tittle</a>
@@ -56,7 +78,7 @@
                 </article>
                 <article class="media">
                     <a class="pull-left thumb p-thumb">
-                       <img src="http://placehold.it/50x50">
+                       <img src="/assets/50x50.gif">
                     </a>
                     <div class="media-body">
                         <a href="#" class=" p-head">Item Two Tittle</a>
@@ -65,7 +87,16 @@
                 </article>
                 <article class="media">
                     <a class="pull-left thumb p-thumb">
-                        <img src="http://placehold.it/50x50">
+                        <img src="/assets/50x50.gif">
+                    </a>
+                    <div class="media-body">
+                        <a href="#" class=" p-head">Item Three Tittle</a>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                </article>
+                <article class="media">
+                    <a class="pull-left thumb p-thumb">
+                        <img src="/assets/50x50.gif">
                     </a>
                     <div class="media-body">
                         <a href="#" class=" p-head">Item Three Tittle</a>
