--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -642,6 +642,7 @@ border-color: #eff2f7;
 
 /***** EVENTO LIST ****************/
 .fa { margin-right:5px;}
+.well {background-color: white;}
 .section-box h2 { margin-top:0px;}
 .section-box h2 a { font-size:15px; }
 .separator { padding-right:5px;padding-left:5px; }
