--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -18,6 +18,21 @@ body {
  color:black;
 }
 
+#ads p {
+	text-align: center;
+}
+
+#ads img {
+	position: absolute;
+	left: 50%;
+	margin-left: -165px;
+}
+
+#empty-market {
+	width: 100%;
+	height: 330px;
+}
+
 .ads_img_section{
   margin-left: -15px;
 
@@ -28,7 +43,6 @@ body {
 	vertical-align: middle;
 	border: 0;
 }
-
 
 .ads_img{
 	height: 100%; 
