--- a/app/views/admin/cities/index.html.erb
+++ b/app/views/admin/cities/index.html.erb
@@ -28,6 +28,8 @@
           <td><%= city.city %></td>
           <td><%= city.ads.count %></td>
           <td><%= city.users.count %></td>
+          <td><%# city.events.count %></td>
+
           <td></td>
 
           <!--td><%#city.country_id %></td-->
