--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -54,6 +54,11 @@
           <li> 
            <%= link_to "<i class='fa fa-question-circle'></i> Perguntas".html_safe  , admin_academy_questions_path %>
          </li>
+
+         <li> 
+           <%= link_to "<i class='fa fa-qrcode'></i> Publicidade".html_safe  , admin_publicities_path %>
+         </li>
+
            <li> 
              <%= link_to "<i class='fa fa-eur'></i> Tipos de Preço".html_safe  , admin_price_types_path %>
            </li>
