--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -14,6 +14,7 @@
       <th>Email</th>
       <th>Cidade</th>
       <th>Anúncios</th>
+      <th>Eventos</th>
       <th>Tipo</th>
       <th></th>
       <!--th></th-->
@@ -30,7 +31,8 @@
         <td><%= user.email %></td>
         <td><%= user.city.city %></td>
         <td><%= user.ads.count %></td>
-        <% if user.user_type==2 %><td>Admin</td><% else %><td>User</td><% end %>
+        <td><%# user.events.count %></td>
+        <% if user.user_type==2 then 'Admin' else 'User' end%>
         <td><%= link_to 'Ver', admin_user_path(user) %></td>
         <!--td><%# link_to 'Editar', edit_admin_user_path(user) %></td-->
         <td><%= link_to 'Eliminar', admin_user_path(user), method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
