--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -105,12 +105,12 @@ font-weight: 300;
 }
 /********** index ads **********/
 
-.ads_index_section{
+/*.ads_index_section{
 	margin-right: -15px;
 
 	width: auto;
 	height: auto;
-}
+}*/
 
 .ads_index_img{
 	position: relative;
