--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -18,6 +18,18 @@ body {
  color:black;
 }
 
+.no-effect {
+	text-decoration: none;
+	padding-left: 10px;
+	color: #666B74;
+}
+
+.no-effect:hover {
+	text-decoration: none;
+	padding-left: 10px;
+	color: black;
+}
+
 #ads p {
 	text-align: center;
 }
