--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -13,11 +13,8 @@
   </li>
   <div style="float:right">
     <% if user_signed_in? && current_user.id == @ad.user_id %>
-        <div class="ui-group-buttons">
-          <%= link_to '<i class="fa  fa-edit"></i>'.html_safe, edit_ad_path(@ad),:class=>"btn btn-info", :tile=> "Editar Anúncio" %>
-          <div class="or"></div>
-          <%= link_to '<i class="fa fa fa-trash-o"></i>'.html_safe, @ad, method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu anúncio ?' } ,:class=>"btn btn-danger", :tile=> "Apagar Anúncio"%>
-        </div>
+          <%= link_to '<i class="fa fa-edit"></i>Editar '.html_safe, edit_ad_path(@ad), class:'no-effect', :tile=> "Editar Anúncio" %>
+          <%= link_to '<i class="fa fa-trash-o"></i>Eliminar '.html_safe, @ad, class:'no-effect', method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu anúncio ?' } ,:tile=> "Apagar Anúncio"%>
     <% end %>
   </div>
 </ol>
