--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -1,32 +1,28 @@
 <div class="col-lg-12 col-md-12 col-sx-12 col-sm-6">
   <section class="panel">
     <header class="panel-heading">Publicidade</header>
+    <% publicity_list = get_publicity(3) %>
     <div class="panel-body">
       <ul class="thumbnails list-unstyled">
-
+        <% publicity_list.each do |publicity|  %>
           <li style="margin-bottom:-25px;">
             <div class="thumbnail" style="padding: 0">
               <div style="padding:4px">
-                <img alt="Pub1" id="pubAD" src="/assets/pub1.jpg">
+                <table>
+                  <tr>
+                    <td> 
+                      <%= image_tag(publicity.image.url(:thumb), :alt => publicity.title, :width => '100') %>
+                    </td>
+                    <td valign="top">
+                      <h5><%= publicity.title %></h5>
+                      <h6><%= publicity.description %></h6>
+                    </td>
+                  </tr>
+                </table>
               </div>
             </div>
           </li>
-
-          <li style="margin-bottom:-25px;">
-            <div class="thumbnail" style="padding: 0">
-              <div style="padding:4px">
-                <img alt="Pub2" id="pubAD" src="/assets/pub2.jpg">
-              </div>
-            </div>
-          </li>
-
-          <li style="margin-bottom:-25px;">
-            <div class="thumbnail" style="padding: 0">
-              <div style="padding:4px">
-                <img alt="Pub3" id="pubAD" src="/assets/pub3.jpg">
-              </div>
-            </div>
-          </li>
+        <% end %>
 
        </ul>
     </div>
