--- a/app/views/layouts/_header_academy_notification.html.erb
+++ b/app/views/layouts/_header_academy_notification.html.erb
@@ -1,9 +1,8 @@
 
-<% number_notifications_ads = @notifications_new_answer.length %>
 <li class="dropdown messages-dropdown">
-
-  <% if number_notifications_ads > 0 %>
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-book" id="fa-book"></i><span class="badge" id="custom-badge"><%= number_notifications_ads %></span><b class="caret" id="dropCarret"></b></a>
+ 
+  <% if @number_notifications_academy > 0 %>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-book" id="fa-book"></i><span class="badge" id="custom-badge"><%= @number_notifications_academy %></span><b class="caret" id="dropCarret"></b></a>
   <% else %>
     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-book"  id="fa-book"></i><b class="caret" id="dropCarret"></b></a>
   <% end %>
@@ -14,7 +13,7 @@
     <% if @notifications_new_answer.length > 0 %>
       <li class="dropdown-header"><%= @notifications_new_answer.length %> Novas Respostas</li>
       <% @notifications_new_answer.each do |notification| %>
-        <% question = Academy::Question.find(notification.id_destination) %>
+        <% question = notification.question %>
         <li class="preview">
           <a href="<%= academy_question_path(question, :notification => notification) %>">
             <span class="name"><%= question.title %></span>
@@ -24,9 +23,24 @@
       <li class="divider"></li>
     <% end %>
 
-    <% if number_notifications_ads == 0 %>
+        <%# notifications new answers for your questions %>
+    <% if @notification_acmy_new_registration.length > 0 %>
+      <li class="dropdown-header"><%= @notification_acmy_new_registration.length %> Novas Inscrições</li>
+      <% @notification_acmy_new_registration.each do |notification| %>
+        <% workshop = notification.workshop %>
+        <li class="preview">
+          <a href="<%= academy_workshop_path(workshop, :notification => notification) %>">
+            <span class="name"><%= workshop %></span>
+          </a>
+        </li>
+      <% end %>
+      <li class="divider"></li>
+    <% end %>
+
+    <% if @number_notifications_academy == 0 %>
       <li class="dropdown-header">Sem novos alertas.</li>
     <% end %>
+
 
   </ul>
 </li>
