--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -6,7 +6,7 @@
         <div class="panel-heading" style="background-color: #39b3d7">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseMercado">
-                <span class="icon-shopping-cart" style="margin-right: 2px"></span>MERCADO
+                <span class="icon-tags" style="margin-right: 2px"></span>MERCADO
             </a>
           </h4>
         </div>
